tests/baselines/reference/usingDeclarations.8(strict=true).errors.txt
usingDeclarations.8.ts(2,11): error TS1155: 'using' declarations must be initialized.
usingDeclarations.8.ts(2,11): error TS7005: Variable 'a' implicitly has an 'any' type.


==== usingDeclarations.8.ts (2 errors) ====
    {
        using a;
              ~
!!! error TS1155: 'using' declarations must be initialized.
              ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
    }